Implement filter user
